# yunpat

./: .editorconfig  .env.example  .env.glm.example  .env.quickstart.example  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  CI_MONITORING_GUIDE.md  CI_MONITORING_REPORT_20260501.md  CI_OPTIMIZATION_PLAN.md  CI_OPTIMIZATION_RESULTS.md  CI_SETUP_GUIDE.md  CI_SIMPLIFICATION.md  CLAUDE.md  CODEGEEX-QUICKSTART.md  CODE_OPTIMIZATION_ROUND2.md  CODE_OPTIMIZATION_ROUND3.md  CODE_QUALITY_CHECKLIST.md  CODE_QUALITY_COMPLETION_REPORT.md  CODE_QUALITY_OPTIMIZATION.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_VERIFICATION_REPORT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cargo.toml  DIRECTORY_STRUCTURE_AUDIT.md  FINAL_PROJECT_REPORT.md  KARPATHY_PRINCIPLES_GUIDE.md  LICENSE  Makefile  PHASE2_SUMMARY.md  PROJECT_CLEANUP_COMPLETED.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUALITY_CHECK_SUMMARY.txt  QUICK_START.md  README.md  (+29 more)
crates/crates/agent/: Cargo.toml
crates/crates/agent/src/: lib.rs
crates/crates/app-server/: Cargo.toml
crates/crates/app-server/src/: lib.rs  main.rs
crates/crates/cli/: Cargo.toml
crates/crates/cli/src/: lib.rs  main.rs  metrics.rs  update.rs
crates/crates/config/: Cargo.toml
crates/crates/config/src/: lib.rs
crates/crates/config/tests/: config_test.rs
crates/crates/core/: Cargo.toml
crates/crates/core/src/: helpers.rs  job_manager.rs  lib.rs  runtime.rs  thread_manager.rs
crates/crates/execpolicy/: Cargo.toml
crates/crates/execpolicy/src/: bash_arity.rs  constitutional.rs  lib.rs
crates/crates/execpolicy/src/principles/: bulk_export_deny.rs  claim_integrity.rs  data_sovereignty.rs  irreversible_action.rs  mod.rs  submission_audit.rs
crates/crates/hooks/: Cargo.toml
crates/crates/hooks/src/: hook_pipeline.rs  lib.rs  stdio_hook.rs
crates/crates/mcp/: Cargo.toml
crates/crates/mcp/src/: lib.rs  stdio_transport.rs  transport.rs
crates/crates/tools/: Cargo.toml
crates/crates/tools/src/: lib.rs
crates/crates/tools/tests/: parity_tools.rs
crates/crates/tui/: Cargo.toml
crates/crates/tui/src/: acp_server.rs  audit.rs  automation_manager.rs  cli_defs.rs  cli_setup.rs  client.rs  command_safety.rs  compaction.rs  composer_history.rs  config.rs  config_ui.rs  cost_status.rs  cycle_manager.rs  deepseek_theme.rs  eval.rs  features.rs  handoff.rs  hooks.rs  lib.rs  localization.rs  logging.rs  main.rs  mcp.rs  mcp_server.rs  memory.rs  models.rs  network_policy.rs  palette.rs  pricing.rs  project_context.rs  project_doc.rs  prompts.rs  retry_status.rs  runtime_api.rs  runtime_threads.rs  seam_manager.rs  session_manager.rs  settings.rs  task_manager.rs  utils.rs  (+3 more)
crates/crates/tui/src/client/: chat.rs
crates/crates/tui/src/commands/: anchor.rs  attachment.rs  case.rs  config.rs  core.rs  cycle.rs  debug.rs  goal.rs  hooks.rs  init.rs  kb.rs  memory.rs  mod.rs  network.rs  note.rs  patent.rs  provider.rs  queue.rs  session.rs  share.rs  skills.rs  task.rs  user_commands.rs
crates/crates/tui/src/config/: capacity.rs  mod.rs  providers.rs  runtime.rs  tui.rs
crates/crates/tui/src/core/: agent_executor.rs  capacity.rs  capacity_memory.rs  coherence.rs  engine.rs  events.rs  mod.rs  ops.rs  session.rs  tool_parser.rs
crates/crates/tui/src/execpolicy/: amend.rs  parser.rs  policy.rs  rules.rs
crates/crates/tui/src/llm_client/: adapter.rs  mock.rs  mod.rs
crates/crates/tui/src/lsp/: client.rs  mod.rs
crates/crates/tui/src/modules/: text.rs
crates/crates/tui/src/patent/: commands.rs  mod.rs  workflow.rs
crates/crates/tui/src/prompts/: base.md  base.txt
crates/crates/tui/src/repl/: runtime.rs
crates/crates/tui/src/rlm/: bridge.rs  prompt.rs  turn.rs
crates/crates/tui/src/sandbox/: backend.rs  landlock.rs  mod.rs  opensandbox.rs  policy.rs  seatbelt.rs  windows.rs
crates/crates/tui/src/skills/: install.rs  mod.rs  system.rs
crates/crates/tui/src/snapshot/: mod.rs  paths.rs  prune.rs  repo.rs
crates/crates/tui/src/tools/: apply_patch.rs  approval_cache.rs  automation.rs  diagnostics.rs  diff_format.rs  fetch_url.rs  file.rs  file_search.rs  fim.rs  finance.rs  git.rs  git_history.rs  github.rs  large_output_router.rs  mcp_tool_adapter.rs  mod.rs  patent_batch_analysis.rs  patent_parallel_search.rs  patent_specs.rs  patent_workflow.rs  plan.rs  project.rs  recall_archive.rs  registry.rs  revert_turn.rs  review.rs  rlm.rs  schema_sanitize.rs  search.rs  shell.rs  shell_output.rs  skill.rs  spec.rs  tasks.rs  test_runner.rs  todo.rs  truncate.rs  web_run.rs  web_search.rs
crates/crates/tui/src/tui/: active_cell.rs  app.rs  approval.rs  backtrack.rs  clipboard.rs  collaboration_gate.rs  color_compat.rs  command_palette.rs  context_inspector.rs  context_menu.rs  diff_render.rs  external_editor.rs  file_frecency.rs  file_mention.rs  file_picker.rs  file_tree.rs  frame_rate_limiter.rs  history.rs  live_transcript.rs  markdown_render.rs  mcp_routing.rs  mod.rs  model_picker.rs  pager.rs  (+17 more)
crates/crates/tui/tests/: eval_harness.rs  integration_mock_llm.rs  palette_audit.rs  skill_install.rs
crates/crates/yunpat-agents/: Cargo.toml
crates/crates/yunpat-agents/src/: agent.rs  case.rs  context.rs  creativity.rs  drafting.rs  flow.rs  flow_executor.rs  flow_loader.rs  helpers.rs  invalidation.rs  knowledge.rs  lib.rs  oa_response.rs  reexamination.rs  registry.rs  research.rs  trademark.rs  types.rs  vector_store.rs
crates/crates/yunpat-agents/tests/: e2e_invalidation.rs
crates/crates/yunpat-mcp-bridge/: Cargo.toml
crates/crates/yunpat-mcp-bridge/src/: agent_adapter.rs  bridge.rs  lib.rs  supervisor.rs
crates/crates/yunpat-models/: Cargo.toml
crates/crates/yunpat-models/src/: config_builder.rs  lib.rs  openai_compat.rs  provider.rs  sse.rs  types.rs
crates/crates/yunpat-models/tests/: embed_tests.rs  sse_tests.rs
crates/crates/yunpat-router/: Cargo.toml
crates/crates/yunpat-router/examples/: benchmark.rs
crates/crates/yunpat-router/src/: lib.rs  router.rs
rust/crates/patent-agent/: Cargo.toml
rust/crates/patent-agent/src/: coordinator.rs  learning.rs
(+1993 files in other folders)
