[package]
name = "yunpat-agent"
version = "0.0.1"
codename = "云熙"
authors = ["徐健 <xujian519@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/xujian519/yunpat-agent"
homepage = "https://github.com/xujian519/yunpat-agent"
description = "云熙知识产权智能体 - 知识产权全生命周期智能体操作系统"
keywords = ["patent", "ip", "ai", "agent", "llm"]
categories = ["development-tools", "command-line-utilities"]

[workspace]
members = [
    "crates/agent",
    "crates/app-server",
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/execpolicy",
    "crates/hooks",
    "crates/mcp",
    "crates/protocol",
    "crates/secrets",
    "crates/state",
    "crates/tools",
    "crates/tui",
    "crates/tui-core",
    "crates/yunpat-agents",
    "crates/yunpat-models",
    "crates/yunpat-mcp-bridge",
    "crates/yunpat-router",
]
default-members = ["crates/cli", "crates/app-server", "crates/tui"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/xujian519/yunpat-agent"
authors = ["徐健 <xujian519@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.5", features = ["json"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.7"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
