[workspace]
members = [
    "crates/crates/agent",
    "crates/crates/app-server",
    "crates/crates/cli",
    "crates/crates/config",
    "crates/crates/core",
    "crates/crates/execpolicy",
    "crates/crates/hooks",
    "crates/crates/mcp",
    "crates/crates/protocol",
    "crates/crates/secrets",
    "crates/crates/state",
    "crates/crates/tools",
    "crates/crates/tui",
    "crates/crates/yunpat-agents",
    "crates/crates/yunpat-models",
    "crates/crates/yunpat-mcp-bridge",
    "crates/crates/yunpat-router",
    "crates/crates/yunpat-patent-tui",
]
default-members = ["crates/crates/cli", "crates/crates/app-server", "crates/crates/tui"]
resolver = "2"

[workspace.package]
version = "0.8.15"
edition = "2024"
# Rust 1.88 stabilized `let_chains` in `if`/`while` conditions, which the
# codebase relies on extensively. Cargo enforces this so users on older
# toolchains get a clear "package requires rustc 1.88+" error instead of a
# confusing E0658 from rustc.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/xujian519/yunpat-agent"
homepage = "https://github.com/xujian519/yunpat-agent"
description = "云熙知识产权智能体 - 知识产权全生命周期智能体操作系统"
keywords = ["patent", "ip", "ai", "agent", "llm"]
categories = ["development-tools", "command-line-utilities"]
authors = ["徐健 <xujian519@gmail.com>"]

[workspace.metadata.tarpaulin]
out = ["Html", "Lcov"]
line-coverage = 70
branch-coverage = 60

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.5", features = ["json"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.7"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
