[package]
name = "yunpat-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model/provider registry and fallback strategy for YunPat TUI workspace architecture"

[dependencies]
yunpat-config = { path = "../config", version = "0.8.15" }
serde.workspace = true
