[package]
name = "yunpat-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "App-server transport for YunPat TUI workspace architecture"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
yunpat-agent = { path = "../agent", version = "0.8.15" }
yunpat-config = { path = "../config", version = "0.8.15" }
yunpat-core = { path = "../core", version = "0.8.15" }
yunpat-execpolicy = { path = "../execpolicy", version = "0.8.15" }
yunpat-hooks = { path = "../hooks", version = "0.8.15" }
yunpat-mcp = { path = "../mcp", version = "0.8.15" }
yunpat-protocol = { path = "../protocol", version = "0.8.15" }
yunpat-state = { path = "../state", version = "0.8.15" }
yunpat-tools = { path = "../tools", version = "0.8.15" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
