[package]
name = "yunpat-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config schema and precedence model for YunPat TUI workspace architecture"

[dependencies]
anyhow.workspace = true
yunpat-secrets = { path = "../secrets", version = "0.8.15" }
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
