[package]
name = "yunpat-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution policy and approval model for YunPat TUI workspace architecture"

[dependencies]
anyhow.workspace = true
yunpat-protocol = { path = "../protocol", version = "0.8.15" }
serde.workspace = true
serde_json.workspace = true
