[package]
name = "yunpat-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hook dispatch and notifications for YunPat TUI workspace architecture"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
yunpat-protocol = { path = "../protocol", version = "0.8.15" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
