[package]
name = "yunpat-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server lifecycle and tool proxy compatibility for YunPat TUI workspace architecture"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
yunpat-protocol = { path = "../protocol", version = "0.8.15" }
