[package]
name = "yunpat-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool invocation lifecycle, schema validation, and scheduler parallelism for YunPat TUI workspace architecture"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
yunpat-protocol = { path = "../protocol", version = "0.8.15" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
