[package]
name = "yunpat-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for YunPat TUI"
default-run = "yunpat-tui"

[features]
default = ["tui", "json", "toml"]
tui = ["dep:schemaui", "schemaui/tui", "json", "toml"]
web = ["dep:schemaui", "schemaui/web", "json", "toml"]
json = ["schemaui/json"]
toml = ["schemaui/toml"]

[[bin]]
name = "yunpat-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
arboard = "3.4"
yunpat-agents = { path = "../yunpat-agents", version = "0.8.15" }
yunpat-protocol = { path = "../protocol", version = "0.8.15" }
yunpat-models = { path = "../yunpat-models", version = "0.8.15" }
yunpat-router = { path = "../yunpat-router" }
yunpat-secrets = { path = "../secrets", version = "0.8.15" }
yunpat-state = { path = "../state", version = "0.8.15" }
yunpat-tools = { path = "../tools", version = "0.8.15" }
yunpat-patent-tui = { path = "../yunpat-patent-tui", version = "0.8.15" }
yunpat-hooks = { path = "../hooks", version = "0.8.15" }
yunpat-execpolicy = { path = "../execpolicy", version = "0.8.15" }
schemaui = { version = "0.12.0", default-features = false, optional = true }
async-stream = "0.3.6"
async-trait = "0.1"
base64 = "0.22.1"
axum = { version = "0.8.4", features = ["json"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
colored = "3.0.0"
crossterm = "0.28"
dotenvy = "0.15.7"
dirs = "6.0.0"
fd-lock = "4.0.4"
futures-util = "0.3.31"
ratatui = "0.30"
regex = "1.11"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "stream", "multipart", "rustls", "http2"] }
similar = "2"
rustyline = "15.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
schemars = { version = "1.2.1", features = ["derive", "preserve_order"] }
shellexpand = "3"
toml = "0.9.7"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
unicode-width = "0.2"
unicode-segmentation = "1.12"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.16"
thiserror = "2.0"
tracing = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
wait-timeout = "0.2"
multimap = "0.10.0"
shlex = "1.3.0"
starlark = "0.13.0"

portable-pty = "0.8"
zeroize = "1.8.2"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
pdf-extract = "0.7"
tar = "0.4"
flate2 = "1.1"
tiny_http = "0.12"
sha2 = "0.10"

[dev-dependencies]
wiremock = "0.6"
pretty_assertions = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_Debug"] }
