[package]
name = "yunpat-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent trait system, registry, and orchestration for YunPat TUI"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-stream = "0.3.6"
futures-core = "0.3"
futures-util = "0.3"
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
urlencoding = "2.1"
markdown = "1.0"
html-escape = "0.2"
lopdf = "0.34"
calamine = "0.26"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.14"

# OCR and image processing (optional features)
tesseract = { version = "0.15", optional = true }
image = { version = "0.25", optional = true }

# DOCX generation
docx-rs = "0.4"

[features]
default = []
ocr = ["tesseract", "image"]

[dev-dependencies]
futures-util = "0.3"
