[package]
name = "yunpat-mcp-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP Bridge for calling YunPat TS/Python agents from Rust"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-stream = "0.3.6"
futures-core = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
tracing.workspace = true
yunpat-agents = { path = "../yunpat-agents", version = "0.8.15" }

[dev-dependencies]
futures-util = "0.3"
tokio = { workspace = true, features = ["rt", "macros"] }
