[package]
name = "yunpat-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-provider ModelProvider interface for YunPat TUI"

[dependencies]
anyhow.workspace = true
async-stream = "0.3.6"
async-trait.workspace = true
bytes = "1.10"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
