[package]
name = "yunpat-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Intent routing and command dispatch for YunPat TUI"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
